--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 
 
 a {
-  color: #3994FF;
+  color: white;
   text-decoration: none;
 }
 
 a:hover {
-  color:#ffb039; 
+  color: #3994FF;
   text-decoration:none; 
 }
 
