frontpage mobile button color changed to 3994FF

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ button {
   font-size: 1.1em;
   font-weight: 500;
   font-family: inherit;
+  background-color: #3994FF;
   cursor: pointer;
   transition: border-color 0.25s;
   color: white;
